refactor: '예외가 생기면 throw하는 메서드 추가'