@@ -1,7 +1,9 @@
 package view;
 
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import static camp.nextstep.edu.missionutils.Console.readLine;
@@ -18,10 +20,14 @@ public class InputView {
         System.out.println(PURCHASE_MESSAGE);
 
         int purchasePrice = Integer.parseInt(readLine());
+        checkingPurchaseException(purchasePrice);
+        return purchasePrice;
+    }
+
+    private static void checkingPurchaseException(int purchasePrice) {
         if(purchasePrice % 1000 != 0 ){
             throw new IllegalArgumentException();
         }
-        return purchasePrice;
     }
 
     public static List<Integer> inputWinningNumber(){
@@ -29,14 +35,50 @@ public class InputView {
 
         String[] numbers = readLine().split(",");
 
-        return Arrays.stream(numbers)
+        List<Integer> winningNumber = Arrays.stream(numbers)
                 .map(Integer::parseInt)
-                .collect(Collectors.toList());
+                .toList();
+
+        checkingWinningNumberException(winningNumber);
+
+        return winningNumber;
     }
 
-    public static int inputBonusNumber(){
+    private static void checkingWinningNumberException(List<Integer> winningNumber) {
+        for(Integer i : winningNumber){
+            if(i > 45){
+                throw new IllegalArgumentException();
+            }
+            if(i<1){
+                throw new IllegalArgumentException();
+            }
+        }
+        Set<Integer> convertSet = new HashSet<>(winningNumber);
+        if(convertSet.size() != 6){
+            throw new IllegalArgumentException();
+        }
+    }
+
+    public static int inputBonusNumber(List<Integer> winningNumber){
         System.out.println(BONUS_NUMBER_MESSAGE);
-        return Integer.parseInt(readLine());
+        int BonusNumber =  Integer.parseInt(readLine());
+
+        checkingBonusNumberException(winningNumber, BonusNumber);
+
+        return BonusNumber;
+    }
+
+    private static void checkingBonusNumberException(List<Integer> winningNumber, int BonusNumber) {
+        if(BonusNumber > 45){
+            throw new IllegalArgumentException();
+        }
+        if(BonusNumber <1){
+            throw new IllegalArgumentException();
+        }
+        Set<Integer> convertSet = new HashSet<>(winningNumber);
+        if(convertSet.contains(BonusNumber)){
+            throw new IllegalArgumentException();
+        }
     }
 
 }
